# AbiaConnect

./: .env  .gitignore  Api tokens.txt  README.md  db.sqlite3  inst.txt  pyproject.toml  requirements.txt  schema.yaml  swagger.html
accounts/: backend.py  form.py  models.py  urls.py  utility.py  views.py
accounts/migrations/: 0001_initial.py  0002_remove_user_is_verified_remove_user_language_and_more.py  0002_remove_user_password_reset_token_user_password2_and_more.py  0003_alter_user_managers.py  0004_profile_delete_otp.py  0005_profile_bio_profile_location.py  0006_alter_profile_bio.py  0007_user_password_reset_token.py
api/: ai.py  finepay_serializer.py  finepay_urls.py  finepay_views.py  serializers.py  urls.py  views.py
api/templates/: password_reset_email.txt
chats/: models.py  urls.py  views.py
chats/migrations/: 0001_initial.py  0002_conversion_message_delete_chat_category_and_more.py  0003_chatcategory_chatdetails.py  0004_message_receiver_alter_message_sender.py
config/settings/: base.py  development.py  production.py
mlresult/: NLP.csv  car_model.pkl  car_model_feature_order.txt  car_scaler.pkl  ml_model.tokenizer.pkl  scaler.pkl  sm.py  tokenizer.pkl  twitter_training.csv
news/: models.py
news/migrations/: 0001_initial.py  0002_rename_timestamp_notification_created_at_and_more.py  0003_announcement_picture_alter_announcement_broadcast_at_and_more.py
social/: settings.py  urls.py  wsgi.py
